# flexvg

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
examples/: gridish.yaml  platform.css  platform.yaml  simple.yaml
flexvg/: .gitignore  Cargo.toml
flexvg-cli/: Cargo.toml
flexvg-cli/src/: main.rs
flexvg/src/: error.rs  lib.rs  prelude.rs  svg.rs  types.rs
