[package]
name = "flexvg-cli"
version = "0.1.0"
edition = "2021"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/flexvg/flexvg"
documentation = "https://github.com/flexvg/flexvg"
homepage = "https://github.com/flexvg/flexvg"
description = "flexvg command-line tool"

[[bin]]
name = "flexvg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.137"}
serde_json = "1.0.81"
serde_yaml = "0.8"
flexvg = {path = "../flexvg", version = "0.1.0", features = ["serde"]}
env_logger = "0.9.0"
