[package]
name = "flexvg"
version = "0.1.0"
edition = "2021"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/flexvg/flexvg"
documentation = "https://github.com/flexvg/flexvg"
homepage = "https://github.com/flexvg/flexvg"
description = "Create SVG diagrams with flexbox"

[features]
serde = ["dep:serde", "dep:regex", "dep:lazy_static", "dep:convert_case"]

[dev-dependencies]
env_logger = "0.9.0"

[dependencies]
log = "0.4.17"
thiserror = "1.0.31"

[dependencies.taffy]
version = "0.1"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = true

[dependencies.regex]
version = "1.5.6"
optional = true

[dependencies.lazy_static]
version = "1.4.0"
optional = true

[dependencies.convert_case]
version = "0.5.0"
optional = true

